--- a/src/events/templates/events/membership/event_registration.html
+++ b/src/events/templates/events/membership/event_registration.html
@@ -18,7 +18,7 @@
 
     <div id="registration-error" class="alert alert-error hidden"></div>
     <div id="registration-success" class="alert alert-success hidden">
-      Registration submitted successfully.
+      Registration submitted successfully
     </div>
 
     <form id="event-registration-form" class="membership-form">
