--- a/src/pages/templates/admin/pages/page/change_list.html
+++ b/src/pages/templates/admin/pages/page/change_list.html
@@ -5,7 +5,7 @@
 {{ block.super }}
 {% if import_url %}
 <li>
-    <a href="{{ import_url }}" style="background: #0f2d52;">
+    <a href="{{ import_url }}">
         Import JSON
     </a>
 </li>
